--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style5.css" />
 
-    <title>Tree.com | We Bridge All</title>
+    <title>bridgeall.org | We Bridge All</title>
 
     <link
       rel="icon"
