--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <header>
-    <h1>Welcom to Tree.com</h1>
+    <h1>Welcom to bridgeall.org</h1>
     <nav>
       <a href="About 2.html">About</a> | <a href="Project.html">Project</a> |
       <a href="Member.html">Member</a> |
@@ -32,7 +32,7 @@
     <section>
       <br />
       <article>
-        <h2 class="first">Where Your Journey Begins</h2>
+        <h2 class="first">This is Where Your Journey Begins</h2>
         <a
           href="/Users/seungwooyoo/Documents/Harry Projects/TREE/040422/Literature/Literature.html"
           >Literature</a
