--- a/About 2.html
+++ b/About 2.html
@@ -9,7 +9,7 @@
   <body>
     <p>We believe that everything is connected. Thank you.</p>
 
-    <a href="/Users/seungwooyoo/Documents/Harry Projects/TREE/041622/index.html"
+    <a href="index.html"
       >Home</a
     >
   </body>
